[package]
name = "valerian"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features=["derive"]}
# reqwest = {version = "0.12.12", features=["blocking", "json"]}
# clap = { version = "4.5.27", features = ["derive"] }
# image = "0.25.5"
curl = "0.4.47"
